updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Everyone calls me Phil. Most people recognize me by my height (6'8"). I am married to Joy and I have two boys.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Edenton, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy fishing, basketball, golf, cooking and hanging out with my family.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I am still trying to figure it out. I like technology though.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Waxhaw, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy building template based websites but I want to build them from scratch without the use of templates.</p>
     </section>
 
     <footer id="footer">
